--- a/MC-GymMasterWebAPI/appsettings.json
+++ b/MC-GymMasterWebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GymConnection": "Server=(localDB)\\MSSQLLocalDB;Database=GymMaster;Trusted_Connection=True; TrustServerCertificate=True;"
+  }
 }
