--- a/MC-GymMasterWebAPI/MC-GymMasterWebAPI.csproj
+++ b/MC-GymMasterWebAPI/MC-GymMasterWebAPI.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="MC_GymMasterWebAPI\" />
     <Folder Include="TechService\" />
   </ItemGroup>
 
