added sending email feature when user fotget password

--- a/MC-GymMasterWebAPI/appsettings.json
+++ b/MC-GymMasterWebAPI/appsettings.json
@@ -8,5 +8,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "GymConnection": "Server=(localDB)\\MSSQLLocalDB;Database=GymMaster;Trusted_Connection=True; TrustServerCertificate=True;"
+  },
+  "MailSettings": {
+    "Host": "smtp.mailersend.net",    
+    "Port": 587,
+    "Name": "smtpemailtest12@gmail.com",
+    "UserName": "MS_7smMGr@trial-3yxj6ljrpw74do2r.mlsender.net",
+    "Password": "pMowOoYuaBWYXDW5"
+   
   }
+
 }
