added image like function

--- a/MC-GymMasterWebAPI/appsettings.json
+++ b/MC-GymMasterWebAPI/appsettings.json
@@ -10,12 +10,12 @@
     "GymConnection": "Server=(localDB)\\MSSQLLocalDB;Database=GymMaster;Trusted_Connection=True; TrustServerCertificate=True;"
   },
   "MailSettings": {
-    "Host": "smtp.mailersend.net",    
+    "Host": "smtp.mailersend.net",
     "Port": 587,
-    "Name": "smtpemailtest12@gmail.com",
-    "UserName": "MS_7smMGr@trial-3yxj6ljrpw74do2r.mlsender.net",
-    "Password": "pMowOoYuaBWYXDW5"
-   
+    "Name": "smpttest12345@gmail.com",
+    "UserName": "MS_ktswHp@trial-r6ke4n1xjd9gon12.mlsender.net",
+    "Password": "mssp.cHnHsDl.v69oxl5oevzg785k.OnYCY5L"
+
   }
 
 }
