added signalr R and JWT token

--- a/MC-GymMasterWebAPI/appsettings.json
+++ b/MC-GymMasterWebAPI/appsettings.json
@@ -16,6 +16,11 @@
     "UserName": "MS_ktswHp@trial-r6ke4n1xjd9gon12.mlsender.net",
     "Password": "mssp.cHnHsDl.v69oxl5oevzg785k.OnYCY5L"
 
+  },
+  "Jwt": {
+    "Key": "your-very-strong-key!123Test12345",
+    "Issuer": "https://localhost:7298",
+    "Audience": "http://localhost:4200"
   }
 
 }
